# aoc-solutions

year-2023/: Cargo.toml  justfile
year-2023/src/: execution.rs  lib.rs
year-2023/src/day1part1/: main.rs  mod.rs
year-2023/src/day1part2/: main.rs
year-2023/src/day2part1/: main.rs  mod.rs
year-2023/src/day2part2/: main.rs  mod.rs
year-2023/src/day3part1/: main.rs  mod.rs
year-2023/src/day3part2/: main.rs  mod.rs
year-2023/src/day4part1/: main.rs  mod.rs
year-2023/src/day4part2/: main.rs  mod.rs
year-2023/src/day5part1/: main.rs  mod.rs
year-2023/src/day5part2/: main.rs  mod.rs
year-2024/: .gitignore  Cargo.toml
year-2024/src/d1p1/: main.rs
year-2024/src/d1p2/: main.rs
year-2024/src/d2p1/: main.rs
year-2024/src/d2p2/: main.rs
year-2024/src/d3p1/: main.rs
year-2024/src/d3p2/: main.rs
year-2024/src/d4p1/: main.rs
year-2024/src/d4p2/: main.rs
year-2024/src/d5p1/: main.rs
year-2024/src/d5p2/: main.rs
year-2024/src/d6p1/: main.rs
year-2024/src/d6p2/: main.rs
year-2024/src/d7p1/: main.rs
year-2024/src/d7p2/: main.rs
year-2024/src/d8p1/: main.rs
year-2024/src/d8p2/: main.rs
