[package]
name = "year-2024"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.11.1"

[[bin]]
name = "d1p1"
path = "src/d1p1/main.rs"

[[bin]]
name = "d1p2"
path = "src/d1p2/main.rs"

[[bin]]
name = "d2p1"
path = "src/d2p1/main.rs"

[[bin]]
name = "d2p2"
path = "src/d2p2/main.rs"

[[bin]]
name = "d3p1"
path = "src/d3p1/main.rs"

[[bin]]
name = "d3p2"
path = "src/d3p2/main.rs"

[[bin]]
name = "d4p1"
path = "src/d4p1/main.rs"

[[bin]]
name = "d4p2"
path = "src/d4p2/main.rs"

[[bin]]
name = "d5p1"
path = "src/d5p1/main.rs"

[[bin]]
name = "d5p2"
path = "src/d5p2/main.rs"

[[bin]]
name = "d6p1"
path = "src/d6p1/main.rs"

[[bin]]
name = "d6p2"
path = "src/d6p2/main.rs"
